<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:background="@color/text_color_white">

    <LinearLayout
        android:id="@+id/ll1"
        android:background="#465295"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.taxialeairy.provider.Utilities.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:padding="16dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/text_color_white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll1"
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />
        <com.taxialeairy.provider.Utilities.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textSize="12sp"
            android:layout_gravity="center"/>
        <com.taxialeairy.provider.Utilities.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_new"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp">

            <com.taxialeairy.provider.Utilities.MyEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_validation"
                android:textAlignment="viewStart"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:drawableStart="@drawable/icon_username"
                android:background="@color/transparent"/>
        </LinearLayout>

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--&gt;-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_new">

            <com.taxialeairy.provider.Utilities.MyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_password"
                android:textAlignment="viewStart"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:drawableStart="@drawable/icon_password"
                android:background="@color/transparent"/>
        </LinearLayout>

        <!--</android.support.design.widget.TextInputLayout>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/password_layout"
        android:orientation="vertical">
        <com.taxialeairy.provider.Utilities.MyTextView
            android:visibility="visible"
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/i_forgot_my_password"
            android:textColor="#404040"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            />
        <com.taxialeairy.provider.Utilities.MyTextView
            android:id="@+id/nextICON"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color_white"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/Login"
            android:background="#465295"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/middle_layout"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.taxialeairy.provider.Utilities.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#404040"
                android:textSize="12sp"
                android:gravity="start"
                android:text="@string/text_login_1"/>
            <com.taxialeairy.provider.Utilities.MyTextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:textColor="#465295"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/Register"
                android:background="@drawable/layout_login_btn"/>

        </LinearLayout>

        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/nextICON"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical|bottom"-->
        <!--android:src="@drawable/ic_arrow_right"-->
        <!--android:layout_margin="@dimen/_20sdp"-->
        <!--android:visibility="gone"/>-->


    </LinearLayout>


</RelativeLayout>
    <!--</ScrollView>-->

