<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_icon" />

            <com.taxialeairy.provider.Utilities.MyTextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/recover_password"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.taxialeairy.provider.Utilities.MyEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/otp_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.taxialeairy.provider.Utilities.MyEditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/secrete_code"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_password_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.taxialeairy.provider.Utilities.MyEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textWebPassword"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.taxialeairy.provider.Utilities.MyEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>

            <com.taxialeairy.provider.Utilities.MyTextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note"
                android:textAlignment="viewStart"
                android:textColor="@color/black_text_color"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nextIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="end"
                android:src="@drawable/next_icon" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
