<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <com.taxialeairy.provider.Utilities.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lnrLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.taxialeairy.provider.Utilities.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/language"
            android:textAlignment="viewStart"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
            android:gravity="bottom" />

        <LinearLayout
            android:id="@+id/lnrEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp">

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.taxialeairy.provider.Utilities.MyBoldTextView
                android:id="@+id/lblEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/english"
                android:textAlignment="viewStart"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/grey"
            android:gravity="bottom" />

        <LinearLayout
            android:id="@+id/lnrArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp">

            <RadioButton
                android:id="@+id/radioArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.taxialeairy.provider.Utilities.MyBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/arabic"
                android:textAlignment="viewStart"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/grey"
            android:gravity="bottom" />

    </LinearLayout>

</LinearLayout>